// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as anchor tag link with href prop 1`] = `
<styled.div
  as="a"
  href="#"
  rel="noopener noreferrer"
  size="default"
  target="_blank"
  theme="default"
  type="button"
>
  Click
</styled.div>
`;

exports[`Button renders as button by default 1`] = `
<styled.div
  as="button"
  size="default"
  theme="default"
  type="button"
>
  Click
</styled.div>
`;

exports[`Button renders custom component if proviuded as prop 1`] = `
<styled.div
  as={[Function]}
  size="default"
  theme="default"
  type="button"
>
  Click
</styled.div>
`;

exports[`Button renders with correct props 1`] = `
<styled.div
  as="button"
  size="default"
  theme="default"
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 2`] = `
<styled.div
  as="button"
  rounded={true}
  size="default"
  theme="default"
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 3`] = `
<styled.div
  as="button"
  inverted={true}
  rounded={true}
  size="default"
  theme="default"
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 4`] = `
<styled.div
  as="button"
  inverted={true}
  rounded={true}
  size="small"
  theme="default"
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 5`] = `
<styled.div
  as="button"
  inverted={true}
  rounded={true}
  size="large"
  theme="default"
  type="submit"
>
  Click me
</styled.div>
`;

exports[`Button renders with correct props 6`] = `
<styled.div
  as="button"
  disabled={true}
  inverted={true}
  rounded={true}
  size="large"
  theme="default"
  type="submit"
>
  Click me
</styled.div>
`;
